sfdx-source/force-app/main/default/objects/Mx_Order_Vendor_Product_Option__c/Mx_Order_Vendor_Product_Option__c.object-meta.xml
<CustomObject>
    <label>Mx Order Vendor Product Option</label>
    <nameField>
        <displayFormat>VPO-{00000}</displayFormat>
        <label>Mx Order Vendor Product Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mx Order Vendor Product Options</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>