sfdx-source/force-app/main/default/objects/Mx_Order_Vendor_Product_Option__c/fields/Mx_Order_Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Mx_Order_Product_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14053: It is used to map the associated product options.</description>
    <label>Mx Order Product Option</label>
    <referenceTo>Mx_Order_Product_Option__c</referenceTo>
    <relationshipLabel>Mx Order Vendor Product Options</relationshipLabel>
    <relationshipName>Mx_Order_Vendor_Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>