sfdx-source/force-app/main/default/objects/Mx_Order_Vendor_Product_Option__c/fields/Optional_Product__c.field-meta.xml
<CustomField>
    <fullName>Optional_Product__c</fullName>
    <description>LEM-14053: It is used to store the optional product</description>
    <label>Optional Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>