sfdx-source/force-app/main/default/objects/Mx_Order_Vendor_Product_Option__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>LEM-14053: It is used to store the Vendor Name</description>
    <label>Vendor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>