sfdx-source/force-app/main/default/objects/Mx_Order_Vendor_Product_Option__c/fields/Vendor_Product_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Product_Option_Name__c</fullName>
    <description>LEM-14053: It is used to store the vendor product option name.</description>
    <label>Vendor Product Option Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>